[workspace]
resolver = "3"
members = [
    "psirt-mcp",
    "psirt-sdk",
    "psirt-utils",
]
default-members = ["psirt-mcp"]

[workspace.package]
version = "0.1.0"
authors = ["yoxxa"]
edition = "2024"

[workspace.dependencies]
psirt_sdk = { path = "psirt-sdk" }
psirt_utils = { path = "psirt-utils"}

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json", "query", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
dotenv = "0.15.0"
